--- a/app/page1.html
+++ b/app/page1.html
@@ -22,12 +22,13 @@
 					</ul>
 				</nav>
 			</div>
+			<div class="text1"><p>Lorem ipsum dolor sit amet.</p></div>
 			<div class="linecontainer"><div class="line"></div></div>
 			<div class="text">
-				<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium minima officia distinctio sit commodi tempore! Suscipit, quibusdam omnis, amet hic molestias saepe iste ipsum adipisci voluptatum ex non perspiciatis, repellendus.</span>
-				<span>Unde sed dolorum inventore voluptatem impedit ducimus porro sit id enim error similique ut dolor rem nostrum, ipsum consectetur quas ipsam, quo nam sapiente repellendus consequatur, repudiandae. Beatae, facilis, iste.</span>
-				<span>Totam harum hic a, veniam qui repudiandae quis. Unde minus officiis vel repellat natus accusamus sit. Minus sint dolorum impedit, fuga recusandae saepe. Excepturi quos omnis veritatis? Porro, libero, consectetur.</span><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum in fugit, quod delectus. Eveniet deserunt maiores, facilis totam nisi nobis rem, temporibus quas ut corrupti, dicta, ipsum error doloribus aperiam!</span>
-				<span>Ducimus nihil ratione ab magni commodi. Rerum autem quibusdam minus voluptates facilis eos nulla, possimus dolorem. Ipsa eaque cum, nemo iste dolores doloremque voluptatum rem blanditiis repellendus quis impedit eius!</span>
+				<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium minima officia distinctio sit commodi tempore! Suscipit, quibusdam omnis, amet hic<img class="img1" src="https://w-dog.ru/wallpapers/1/6/451991491973124/fon-shampury-oranzhevyj-dolki-zerna.jpg" alt=""> molestias saepe iste ipsum adipisci voluptatum ex non perspiciatis, repellendus.</span>
+				<span>Unde sed dolorum inventore voluptatem impedit ducimus porro sit id enim error similique ut dolor rem nostrum, ipsum  consectetur quas ipsam, quo nam sapiente repellendus consequatur, repudiandae. Beatae, facilis, iste.</span>
+				<span>Totam harum hic a, veniam qui repudiandae quis. Unde minus officiis vel repellat natus accusamus sit. Minus sint dolorum impedit, fuga recusandae saepe. Excepturi quos omnis veritatis? Porro, libero, <span class="img"><img src="https://www.sunhome.ru/i/wallpapers/221/frukti-oboi.orig.jpg" alt="" class="img3"></span> consectetur.</span><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum in fugit, quod delectus. Eveniet deserunt maiores, facilis totam nisi nobis rem, temporibus quas ut corrupti, dicta, ipsum error doloribus aperiam!</span>
+				<span>Ducimus nihil ratione ab magni commodi. Rerum autem quibusdam minus voluptates facilis eos nulla, possimus dolorem. Ipsa <img src="http://shing.mobile9.com/download/media/525/lime2_PUX1E3Pv.jpg" alt="" class="img2"> eaque cum, nemo iste dolores doloremque voluptatum rem blanditiis repellendus quis impedit eius!</span>
 				<span>Voluptate et animi nesciunt cumque modi saepe at accusamus. Eum enim, blanditiis! Excepturi est inventore, non officiis odit ea soluta hic, consequuntur eos aliquam repellat, praesentium explicabo saepe vero sint.</span></p>
 			</div>
 		</div>
