--- a/app/form2.html
+++ b/app/form2.html
@@ -3,14 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<title>form2</title>
-	<link rel="stylesheet" href="css/form2.css">
-	<link rel="stylesheet" href="css/body.css">
 	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/body.css">
+	<link rel="stylesheet" href="css/menu.css">
+	<link rel="stylesheet" href="css/form2.css">
+	
+	
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="jquery.js"></script>
 </head>
 <body>
 	<div class="container">
+		<div class="menu">
+				<nav>
+					<ul>
+						<li><a href="page1.html">page 1</a></li>
+						<li><a href="#">page 2</a></li>
+						<li><a href="#">page 3</a></li>
+						<li><a href="#">form</a></li>
+					</ul>
+				</nav>
+			</div>
 		<div class="form">
 			<div class="label">
 				<label for="" class="tab active">sign in</label>
