--- a/app/page1.html
+++ b/app/page1.html
@@ -18,7 +18,7 @@
 						<li><a href="#">page 1</a></li>
 						<li><a href="#">page 2</a></li>
 						<li><a href="#">page 3</a></li>
-						<li><a href="page4.html">page 4</a></li>
+						<li><a href="form2.html">form</a></li>
 					</ul>
 				</nav>
 			</div>
